# pipeline_notification_mvp

./: README.md  pyproject.toml
data/: sample_execution_report.json
pipeline_notification/: channel_payload.py  classifier.py  cli.py  contract.py  loader.py  message_builder.py  report.py
tests/: test_channel_payload.py  test_classifier.py  test_cli.py  test_contract.py  test_loader.py  test_message_builder.py  test_report.py
