[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-notification"
version = "0.1.0"
description = "Pipeline Notification MVP for building notification payloads from execution reports in the RADAR Services utility chain."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "RADAR Services" }
]
dependencies = []

[project.scripts]
pipeline-notification = "pipeline_notification.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["pipeline_notification*"]
exclude = ["data*", "tests*", "outputs*"]
